--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 // Rotate the model 90 degrees counterclockwise along the Z-axis
                 model.rotation.z = 0; // 90 degrees in radians
-                model.rotation.y = 0; 
+                model.rotation.y = Math.PI/2; 
 
                 scene.add(model);
 
