--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         function init() {
             // Scene
             scene = new THREE.Scene();
- 
+
             // Camera
             camera = new THREE.PerspectiveCamera(65, window.innerWidth / window.innerHeight, 0.1, 1000);
             camera.position.set(0, 0, 90); // Position the camera above the model
@@ -73,12 +73,12 @@
 
             // Controls
             controls = new OrbitControls(camera, renderer.domElement);
-            controls.enableRotate = true; // Disable rotation
+            controls.enableRotate = false; // Disable rotation
             controls.enablePan = true; // Allow panning
             controls.enableZoom = true; // Allow zooming
             controls.minDistance = 0.5; // Minimum zoom distance
             controls.maxDistance = 2.5; // Maximum zoom distance
-            controls.maxPolarAngle = Math.PI/8; // Restrict camera to top-down view
+            controls.maxPolarAngle = 0; // Restrict camera to top-down view
             controls.minPolarAngle = 0; // Restrict camera to top-down view
 
             // Clock
@@ -86,12 +86,12 @@
 
             // Load GLB model
             const loader = new GLTFLoader();
-            loader.load('3d_look_2.glb', function(gltf) {
+            loader.load('sixteen_bones_with_pages_linked_sixteententh_action_done.glb', function(gltf) {
                 const model = gltf.scene;
 
                 // Rotate the model 90 degrees counterclockwise along the Z-axis
                 model.rotation.z = 0; // 90 degrees in radians
-                model.rotation.y = 0; 
+                model.rotation.y = Math.PI / 2; 
 
                 scene.add(model);
 
