--- a/index.html
+++ b/index.html
@@ -7,31 +7,9 @@
     <style>
         body { margin: 0; }
         canvas { display: block; }
-        #animation-selector {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            z-index: 1;
-            background: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 5px;
-        }
-        #animation-selector button {
-            display: block;
-            margin: 5px 0;
-        }
-        #animation-info {
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
     </style>
 </head>
 <body>
-    <div id="animation-selector">
-        <div id="animation-info">Animation: <span id="current-animation-name">None</span> (<span id="current-animation-index">0</span>/<span id="total-animations">0</span>)</div>
-        <button id="prev-button">Previous</button>
-        <button id="next-button">Next</button>
-    </div>
     <script type="importmap">
         {
             "imports": {
@@ -46,9 +24,6 @@
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
         let scene, camera, renderer, mixer, clock, controls;
-        const animations = [];
-        let currentAnimationAction = null;
-        let currentAnimationIndex = 0;
 
         init();
         animate();
@@ -56,7 +31,7 @@
         function init() {
             // Scene
             scene = new THREE.Scene();
-
+ 
             // Camera
             camera = new THREE.PerspectiveCamera(65, window.innerWidth / window.innerHeight, 0.1, 1000);
             camera.position.set(0, 0, 90); // Position the camera above the model
@@ -73,12 +48,12 @@
 
             // Controls
             controls = new OrbitControls(camera, renderer.domElement);
-            controls.enableRotate = false; // Disable rotation
+            controls.enableRotate = true; // Disable rotation
             controls.enablePan = true; // Allow panning
             controls.enableZoom = true; // Allow zooming
             controls.minDistance = 0.5; // Minimum zoom distance
             controls.maxDistance = 2.5; // Maximum zoom distance
-            controls.maxPolarAngle = 0; // Restrict camera to top-down view
+            controls.maxPolarAngle = Math.PI/8; // Restrict camera to top-down view
             controls.minPolarAngle = 0; // Restrict camera to top-down view
 
             // Clock
@@ -86,39 +61,26 @@
 
             // Load GLB model
             const loader = new GLTFLoader();
-            loader.load('sixteen_bones_with_pages_linked_sixteententh_action_done.glb', function(gltf) {
+            loader.load('3d_look_2.glb', function(gltf) {
                 const model = gltf.scene;
 
                 // Rotate the model 90 degrees counterclockwise along the Z-axis
                 model.rotation.z = 0; // 90 degrees in radians
-                model.rotation.y = Math.PI / 2; 
+                model.rotation.y = 0; 
 
                 scene.add(model);
 
                 // Parse animations
                 mixer = new THREE.AnimationMixer(model);
-                gltf.animations.forEach((clip) => {
-                    animations.push(clip); // Store the animation clip
-                });
-
-                // Update UI with total animations
-                document.getElementById('total-animations').textContent = animations.length;
-
-                // Play the first animation by default
-                if (animations.length > 0) {
-                    playAnimation(currentAnimationIndex);
+                
+                // Check if there are at least 9 animations
+                if (gltf.animations.length >= 9) {
+                    const ninthAnimation = gltf.animations[8]; // Get the 9th animation (index 8)
+                    const action = mixer.clipAction(ninthAnimation);
+                    action.play();
+                } else {
+                    console.warn(`The model only has ${gltf.animations.length} animations, cannot play the 9th one.`);
                 }
-
-                // Add event listeners for Next and Previous buttons
-                document.getElementById('next-button').addEventListener('click', () => {
-                    currentAnimationIndex = (currentAnimationIndex + 1) % animations.length;
-                    playAnimation(currentAnimationIndex);
-                });
-
-                document.getElementById('prev-button').addEventListener('click', () => {
-                    currentAnimationIndex = (currentAnimationIndex - 1 + animations.length) % animations.length;
-                    playAnimation(currentAnimationIndex);
-                });
             });
 
             // Lights
@@ -129,19 +91,6 @@
             const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
             directionalLight.position.set(1, 1, 1);
             scene.add(directionalLight);
-        }
-
-        function playAnimation(index) {
-            if (currentAnimationAction) {
-                currentAnimationAction.stop(); // Stop the current animation
-            }
-            const clip = animations[index]; // Get the animation clip
-            currentAnimationAction = mixer.clipAction(clip); // Create a new action
-            currentAnimationAction.reset().play(); // Play the animation
-
-            // Update UI with current animation name and index
-            document.getElementById('current-animation-name').textContent = clip.name || `Animation ${index + 1}`;
-            document.getElementById('current-animation-index').textContent = index + 1;
         }
 
         function animate() {
