--- a/index.html
+++ b/index.html
@@ -27,19 +27,14 @@
     <div id="animation-selector">
         <div id="animation-info">Action: <span id="current-action-name">None</span> (<span id="current-action-index">0</span>/13)</div>
     </div>
-    <script type="importmap">
-        {
-            "imports": {
-                "three": "https://unpkg.com/three@0.162.0/build/three.module.js",
-                "three/addons/": "https://unpkg.com/three@0.162.0/examples/jsm/"
-            }
-        }
-    </script>
-    <script type="module">
-        import * as THREE from 'three';
-        import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
-        import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
-
+    
+    <!-- Local library scripts -->
+    <script src="three.min.js"></script>
+    <script src="GLTFLoader.js"></script>
+    <script src="OrbitControls.js"></script>
+    
+    <script>
+        // Rest of the previous script remains the same, with global THREE namespace
         let scene, camera, renderer, mixer, clock, controls;
         const animations = [];
         let currentAnimationAction = null;
@@ -104,7 +99,7 @@
             document.body.appendChild(renderer.domElement);
 
             // Controls (Restrict to top-down view)
-            controls = new OrbitControls(camera, renderer.domElement);
+            controls = new THREE.OrbitControls(camera, renderer.domElement);
             controls.enableRotate = false; // Disable rotation
             controls.enablePan = true; // Allow panning
             controls.enableZoom = true; // Allow zooming
@@ -117,7 +112,7 @@
             clock = new THREE.Clock();
 
             // Load GLB model for the book
-            const loader = new GLTFLoader();
+            const loader = new THREE.GLTFLoader();
             loader.load('book2.glb', function(gltf) {
                 const model = gltf.scene;
 
