--- a/index.html
+++ b/index.html
@@ -235,8 +235,11 @@
                 scene.add(linkButton3);
             });
 
-
-
+            // Lights
+            const hemisphereLight = new THREE.HemisphereLight(0xffffff, 0x444444, 0.7); // Bright ambient light
+            hemisphereLight.position.set(0, 50, 0);
+            scene.add(hemisphereLight);
+       
             // Mouse event listeners for 3D button interaction
             renderer.domElement.addEventListener('click', onMouseClick);
             renderer.domElement.addEventListener('mousemove', onMouseMove);
