--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
             // Load GLB model for the book
             const loader = new THREE.GLTFLoader();
-            loader.load('book2.glb', function(gltf) {
+            loader.load('book3d_all_poses.glb', function(gltf) {
                 const model = gltf.scene;
 
                 // Rotate the model 90 degrees counterclockwise along the Z-axis
