--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
                 model.position.x = 0.2; 
                 model.position.z = -0.4; 
 
+                model.scale.x = 0.66; 
+
                 scene.add(model);
 
                 // Parse animations
