--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
                 model.position.x = 0.2; 
                 model.position.z = -0.4; 
 
+                model.scale.x = 0.8;
+
                 scene.add(model);
 
                 // Parse animations
