--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
             // Controls (Restrict to top-down view)
             controls = new THREE.OrbitControls(camera, renderer.domElement);
-            controls.enableRotate = true; // Disable rotation
+            controls.enableRotate = false; // Disable rotation
             controls.enablePan = true; // Allow panning
             controls.enableZoom = true; // Allow zooming
             controls.minDistance = 0.5; // Minimum zoom distance
