--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             });
 
             // Load Custom Link Button 1 GLB (Download button)
-            loader.load('download.glb', function(gltf) {
+            loader.load('download2.glb', function(gltf) {
                 linkButton1 = gltf.scene;
                 linkButton1.position.set(-0.5, 0, 1.35); // Position to the left side
                 linkButton1.rotation.z = Math.PI/2; // Rotate to match the previous orientation
