--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             const loader = new GLTFLoader();
             
             // Load GLB model for the book
-            loader.load('book3d_all_poses.glb', function(gltf) {
+            loader.load('book3d_all_poses_2.glb', function(gltf) {
                 const model = gltf.scene;
 
                 // Rotate the model 90 degrees counterclockwise along the Z-axis
